# deer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: FUNDING.yml
benchmarks/: bench_main.cpp  conversation_generator.h  report.py
benchmarks/results/: bench_results.json
hashes/: .atlas.graph.json  .chronos.json  local.map.json
hashes/grammar/: cpp.hash.md
hashes/include/deer/: layer.hash.md  layers.hash.md  runtime.hash.md  services.hash.md  tags.hash.md
hashes/include/deer/cli/: cli.hash.md
hashes/include/deer/layers/: cli_layer.hash.md  compress_layer.hash.md  config_layer.hash.md  logger_layer.hash.md  storage_layer.hash.md
hashes/include/deer/layers/test/: compress_layer_test.hash.md  storage_layer_test.hash.md
hashes/include/deer/ops/: archive.hash.md  compress.hash.md
hashes/include/deer/types/: archive.hash.md  cli_service.hash.md  compress_service.hash.md  config.hash.md  errors.hash.md  logger.hash.md  storage.hash.md  version.hash.md
hashes/src/: main.hash.md
include/deer/: layer.h  layers.h  runtime.h  services.h  tags.h
include/deer/cli/: cli.h
include/deer/layers/: cli_layer.h  compress_layer.h  config_layer.h  logger_layer.h  storage_layer.h
include/deer/layers/test/: compress_layer_test.h  storage_layer_test.h
include/deer/ops/: archive.h  compress.h
include/deer/types/: archive.h  cli_service.h  compress_service.h  config.h  errors.h  logger.h  storage.h  version.h
src/: main.cpp
